13808
When running `scala -Ycheck:typer`, entering
```scala
scala> case class A()
```
will produce the following output:
```scala
exception while typing x$$1
exception while typing A.this.eq(x$$1)
exception while typing A.this.eq(x$$1).||
<console>:4: error: **** ERROR DURING INTERNAL CHECKING ****
type mismatch;
 found   : x$$1.type (with underlying type Any)
 required: AnyRef
       case class A()
                  ^
exception while typing x$$1
exception while typing A.this.eq(x$$1)
exception while typing A.this.eq(x$$1).||
exception while typing A.this.eq(x$$1).||(x$$1 match {
  case A() => true
  case _ => false
})
exception while typing x$$1.isInstanceOf[AnyRef].&&(A.this.eq(x$$1).||(x$$1 match {
  case A() => true
  case _ => false
}))
exception while typing override def equals(x$$1: Any): Boolean = x$$1.isInstanceOf[AnyRef].&&(A.this.eq(x$$1).||(x$$1 match {
  case A() => true
  case _ => false
}))
```

It's not confined to the interpreter, though (happens also with scalac). Specifying other compiler phases in `-Ycheck` will show the same behavior.
